--- a/Projects/Dait_Kobe_Assignment2/public/login_design.css
+++ b/Projects/Dait_Kobe_Assignment2/public/login_design.css
@@ -34,6 +34,25 @@ body {
   margin-bottom: 60px;
 }
 
+/* Register window */
+
+.register-form {
+  width: 360px;
+  background: #f1f1f1;
+  height: 680px;
+  padding: 80px 40px;
+  border-radius: 10px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.register-form h1 {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
 /* User Input */
 
 .txtb {
