css for new class

--- a/Projects/Dait_Kobe_Assignment2/public/store_design.css
+++ b/Projects/Dait_Kobe_Assignment2/public/store_design.css
@@ -157,3 +157,7 @@ input[type=submit]:hover {
     transform: translate(-50%, -50%);
     border: 1px solid white;
 }
+
+.invoice-box table tr.total {
+    border-bottom: 2px solid black;
+}
