--- a/Projects/Dait_Kobe_Assignment2/public/login_design.css
+++ b/Projects/Dait_Kobe_Assignment2/public/login_design.css
@@ -1,4 +1,8 @@
-/* All CSS below is taken from https://darkcode1.blogspot.com/2019/07/animated-login-form-using-html-css.html */
+/* Author: Kobe Dait */
+
+/* File Description: Login/Registration Styling Sheet */
+
+/* Some CSS below is taken from https://darkcode1.blogspot.com/2019/07/animated-login-form-using-html-css.html */
 
 * {
   margin: 0;
@@ -40,7 +44,7 @@ body {
   width: 360px;
   background: #f1f1f1;
   height: 680px;
-  padding: 80px 40px;
+  padding: 60px 40px;
   border-radius: 10px;
   position: absolute;
   left: 50%;
@@ -50,7 +54,7 @@ body {
 
 .register-form h1 {
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 
 /* User Input */
@@ -124,4 +128,22 @@ body {
   margin-top: 60px;
   text-align: center;
   font-size: 13px;
+}
+
+/* Register Button on Login Page styling */
+
+.regButton {
+  width: 80px;
+  height: 40px;
+  border: none;
+  background: linear-gradient(120deg, #3498db, #8e44ad, #3498db);
+  background-size: 200%;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+  transition: .5s;
+}
+
+.regButton:hover {
+  background-position: right;
 }
