--- a/Projects/Dait_Kobe_Assignment4/public/loyalty.css
+++ b/Projects/Dait_Kobe_Assignment4/public/loyalty.css
@@ -16,16 +16,22 @@
 
 body {
   min-height: 100vh;
-  background-image: linear-gradient(120deg, #3498db, #8e44ad);
 }
 
+/* Logo styling */
 
+#mb-logo {
+  display: inline-block;
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
 
 /* Login window */
 
 .login-form {
   width: 360px;
-  background: #f1f1f1;
+  background: darkgray;
   min-height: fit-content;
   padding: 80px 40px;
   border-radius: 10px;
@@ -50,7 +56,7 @@ body {
 
 .txtb input {
   font-size: 15px;
-  color: #333;
+  color: black;
   border: none;
   width: 100%;
   outline: none;
@@ -66,7 +72,7 @@ body {
   position: absolute;
   top: 50%;
   left: 5px;
-  color: #adadad;
+  color: black;
   transform: translateY(-50%);
   z-index: -1;
   transition: .5s;
@@ -96,7 +102,7 @@ body {
   width: 100%;
   height: 50px;
   border: none;
-  background: linear-gradient(120deg, #3498db, #8e44ad, #3498db);
+  background: linear-gradient(120deg, black,  darkgray, black);
   background-size: 200%;
   color: #fff;
   outline: none;
@@ -106,10 +112,4 @@ body {
 
 .logbtn:hover {
   background-position: right;
-}
-
-.bottom-text {
-  margin-top: 60px;
-  text-align: center;
-  font-size: 13px;
 }
