--- a/Projects/Dait_Kobe_Assignment4/public/loyalty.css
+++ b/Projects/Dait_Kobe_Assignment4/public/loyalty.css
@@ -18,6 +18,24 @@ body {
   min-height: 100vh;
 }
 
+/* Header styling */
+
+header {
+  background-color: black;
+  color: white;
+}
+
+#header-bar {
+  padding: 10px;
+  list-style-type: none;
+  overflow: hidden;
+}
+
+#page-title {
+  text-align: right;
+  font-size: 36px;
+}
+
 /* Logo styling */
 
 #mb-logo {
@@ -33,7 +51,7 @@ body {
   width: 360px;
   background: darkgray;
   min-height: fit-content;
-  padding: 80px 40px;
+  padding: 50px 40px;
   border-radius: 10px;
   position: absolute;
   left: 50%;
@@ -101,8 +119,7 @@ body {
   display: block;
   width: 100%;
   height: 50px;
-  border: none;
-  background: linear-gradient(120deg, black,  darkgray, black);
+  background: linear-gradient(120deg, black, darkgray, black);
   background-size: 200%;
   color: #fff;
   outline: none;
